--- a/public/08-account-forget.html
+++ b/public/08-account-forget.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Ремонт триммеров</title>
+		<title>Авторизация</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 	</head>
-	<body>
+	<body class="contact-page" data-bg="02-catalog.png">
 		<div class="main-wrapper">
 			<!-- start topLine-->
 			<div class="topLine section" id="topLine">
@@ -425,105 +425,43 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Сервисный центр</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Авторизация</span>
 									<meta itemprop="position" content="2"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Ремонт триммеров</span>
-									<meta itemprop="position" content="3"/></a></li>
 						</ol>
 					</nav>
-					<h1>Ремонт триммеров</h1>
+					<h1>Авторизация</h1>
 				</div>
 			</div>
-			<div class="container page-container">
+			<div class="container">
 				<div class="row">
 					<div class="col-lg-2">
 						<div class="sidebar">
 							<ul>
-								<li><a href="#">Сервис</a>
+								<li><a class="active" href="#">Личные данные</a>
 								</li>
-								<li><a href="#">Ремонт аэраторов, скарификаторов и вертикуттеров</a>
+								<li><a href="#">Мои заказы</a>
 								</li>
-								<li><a href="#">Ремонт бензопил</a>
-								</li>
-								<li><a href="#">Ремонт газонокосилок</a>
-								</li>
-								<li><a href="#">Ремонт генераторов и электростанций</a>
-								</li>
-								<li><a href="#">Ремонт измельчителей</a>
-								</li>
-								<li><a href="#">Ремонт кусторезов</a>
-								</li>
-								<li><a href="#">Ремонт минитракторов и райдеров</a>
-								</li>
-								<li><a href="#">Ремонт мотопомп</a>
-								</li>
-								<li><a href="#">Ремонт садовых опрыскивателей</a>
-								</li>
-								<li><a href="#">Ремонт садовых пылесосов и воздуходувок</a>
-								</li>
-								<li><a href="#">Ремонт снегоуборщиков</a>
-								</li>
-								<li><a class="active" href="#">Ремонт триммеров</a>
+								<li><a href="#">Выйти</a>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-lg-10">
 						<div class="mainside">
-							<!-- start sService-->
-							<div class="sService" id="sService">
-								<p>Неработоспособность триммера может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов триммера, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.</p>
-								<p><strong>Ориентировочная стоимость основных работ</strong></p>
-								<table>
-									<tr>
-										<th>Виды работ</th>
-										<th>Стоимость, руб.</th>
-									</tr>
-									<tr>
-										<td>Диагностика</td>
-										<td>1250</td>
-									</tr>
-									<tr>
-										<td>Замена свечи зажигания</td>
-										<td>150</td>
-									</tr>
-									<tr>
-										<td>Замена воздушного фильтра</td>
-										<td>150</td>
-									</tr>
-									<tr>
-										<td>Ремонт / замена стартера</td>
-										<td>750</td>
-									</tr>
-									<tr>
-										<td>Регулировка карбюратора</td>
-										<td>250</td>
-									</tr>
-									<tr>
-										<td>Ремонт / очистка карбюратора в УЗВ</td>
-										<td>1250</td>
-									</tr>
-									<tr>
-										<td>Замена катушки зажигания</td>
-										<td>750</td>
-									</tr>
-									<tr>
-										<td>Регулировка зазора катушки зажигания</td>
-										<td>750</td>
-									</tr>
-									<tr>
-										<td>Ремонт / замена крыльчатки</td>
-										<td>750</td>
-									</tr>
-									<tr>
-										<td>Мойка технологическая</td>
-										<td>250</td>
-									</tr>
-									<tr>
-										<td>Замена топливного фильтра</td>
-										<td>250</td>
-									</tr>
-								</table>
+							<div class="sAccount" id="sAccount">
+								<div class="sAccount__forget-wrap">
+									<p>Если вы&nbsp;забыли пароль, введите E-Mail.<br />Контрольная строка для смены пароля, а&nbsp;также ваши регистрационные данные, будут высланы вам по&nbsp;E-Mail.</p>
+									<div class="form-wrap">
+										<form>
+											<div class="form-wrap__input-wrap form-group">
+												<label><span class="form-wrap__input-title">E-mail*:</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+												</label>
+											</div>
+											<!-- +e.input-wrap-->
+											<div class="sAccount__login-btn-wrap"><a class="sAccount__send btn btn-main" href="#">Выслать</a><a class="sAccount__link" href="#">Назад</a></div>
+										</form>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
