--- a/public/07-service-center-9.html
+++ b/public/07-service-center-9.html
@@ -436,7 +436,7 @@
 			</div>
 			<div class="container page-container">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3">
 						<div class="sidebar">
 							<div class="sidebar__mob-title">Содержание
 								<svg class="icon icon-chevron-down ">
@@ -473,7 +473,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-lg-10">
+					<div class="col-xl-10 col-lg-9">
 						<div class="mainside">
 							<!-- start sService-->
 							<div class="sService" id="sService">
