--- a/public/08-account-login.html
+++ b/public/08-account-login.html
@@ -432,9 +432,9 @@
 					<h1>Авторизация</h1>
 				</div>
 			</div>
-			<div class="container">
+			<div class="container page-container">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3">
 						<div class="sidebar">
 							<div class="sidebar__mob-title">Содержание
 								<svg class="icon icon-chevron-down ">
@@ -451,7 +451,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-lg-10">
+					<div class="col-xl-10 col-lg-9">
 						<div class="mainside">
 							<!-- start sAccount-->
 							<div class="sAccount" id="sAccount">
