--- a/public/08-account-profile.html
+++ b/public/08-account-profile.html
@@ -432,7 +432,7 @@
 					<h1>Профиль пользователя</h1>
 				</div>
 			</div>
-			<div class="container">
+			<div class="container page-container">
 				<div class="row">
 					<div class="col-lg-2">
 						<div class="sidebar">
