--- a/public/08-account-forget.html
+++ b/public/08-account-forget.html
@@ -434,7 +434,7 @@
 			</div>
 			<div class="container page-container">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-xl-2 col-lg-3">
 						<div class="sidebar">
 							<div class="sidebar__mob-title">Содержание
 								<svg class="icon icon-chevron-down ">
@@ -451,7 +451,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-lg-10">
+					<div class="col-xl-10 col-lg-9">
 						<div class="mainside">
 							<div class="sAccount" id="sAccount">
 								<div class="sAccount__forget-wrap">
